--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -18,8 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/static_logo"
         android:layout_marginTop="10dp"
-        android:id="@+id/home_content_listview"
-        android:background="@android:color/white">
+        android:id="@+id/home_content_listview">
 
     </ListView>
 </RelativeLayout>
